feat(auth): implement user authentication endpoints

--- a/Backend/.env.sample
+++ b/Backend/.env.sample
@@ -1,4 +1,25 @@
 PORT=8000
 
 MONGODB_URI=""
+
 NODE_ENV=""
+
+CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET=""
+ACCESS_TOKEN_EXPIRY=1d 
+REFRESH_TOKEN_SECRET=""
+REFRESH_TOKEN_EXPIRY=10d 
+
+CLIENT_URI=_client_uri_
+
+# SMTP Crendtials
+SMTP_HOST= smtp.ethereal.email
+SMTP_PORT= 587
+SMTP_EMAIL= _smtp_email_
+SMTP_PASSWORD= _smtp_pssword_
+
+# Cloudinary  Credentials
+CLOUDINARY_CLOUD_NAME= _cloud_name_
+CLOUDINARY_API_KEY= _api_key_
+CLOUDINARY_API_SECRET= _api_secret_
