--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -22,6 +22,10 @@
       "source": "/dashboard/(.*)",
       "destination": "/index.html"
     },
+    {
+      "source": "/api/(.*)",
+      "destination": "https://erp-system-e83l.onrender.com/api/$1"
+    },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
