--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-loader-spinner": "^6.1.6",
@@ -31,6 +32,7 @@
     "@eslint/js": "^9.8.0",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
+    "@types/react-avatar-editor": "^13.0.2",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
