--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,19 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/material": "^6.0.1",
+    "@mui/styled-engine-sc": "^6.0.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.11.0",
     "axios": "^1.7.3",
+    "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-avatar-editor": "^13.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
@@ -30,7 +37,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "sonner": "^1.5.0",
+    "styled-components": "^6.1.13",
     "tailwind-merge": "^2.4.0",
+    "uninstall": "^0.0.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "yup": "^1.4.0"
   },
